mechanic dashboard and login add