@@ -3,28 +3,35 @@ package com.haris.MechanicApp.Service;
 import com.haris.MechanicApp.Model.Mechanic.Mechanic;
 import org.jspecify.annotations.Nullable;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class MyPrincipalMechanic implements UserDetails {
+
+    private final Mechanic mechanic;
     public MyPrincipalMechanic(Mechanic mechanic) {
+        this.mechanic = mechanic;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_MECHANIC"));
     }
 
     @Override
     public @Nullable String getPassword() {
-        return "";
+        return mechanic.getPassword();
     }
 
     @Override
     public String getUsername() {
-        return "";
+
+          return  mechanic.getPhonenumber();
+
     }
 
     @Override
